# SEO_AD_AutoPilot

./: .env.example  .gitignore  CONTRIBUTING.md  DESCRIPTION.md  Dockerfile  Dockerfile.web  FRONTEND_SUMMARY.md  LICENSE  Makefile  README.md  REFACTORING.md  REFACTORING_SUMMARY.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  seo_ad_cli.py  setup.bat  start-api.bat  start-web.bat
apps/: __init__.py
apps/api/seo_ad_autopilot/: __init__.py  ad_analyzer.py  analysis.py  analysis_api.py  app.py  artifact_store.py  canvas.py  channels.py  competitor_discovery.py  competitor_strategy_analyzer.py  config.py  connectors.py  crawler.py  crawler_enhanced.py  cron.py  db.py  experiments.py  international_social.py  models.py  multimodal.py  notifications.py  observability.py  page_analyzer.py  platform_analyzers.py  quality.py  queueing.py  real_analyzer.py  report_generator.py  reports.py  search_engine_api.py  security.py  seed.py  service.py  skill_registry.py  social_media.py  templates.py  testing.py  website_profiler.py  worker.py
apps/api/tests/: conftest.py  test_api.py  test_smoke_unittest.py  test_workflow.py
apps/web/: .env.example  next.config.mjs  package.json  tsconfig.typecheck.tsbuildinfo
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: ActionSummaryBadge.tsx  AlertPresetManager.tsx  AlertRuleManager.tsx  ApprovalsBulkActions.tsx  BillingGatewayProviderStatusPanel.tsx  (+45 more)
apps/worker/: __init__.py  main.py
docs/: requirements-coverage.md
(+74 files in other folders)
